Bug 1711803 - Don't shrink subgrid's area by the scrollbar sizes.

Differential Revision: https://phabricator.services.mozilla.com/D115438